--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,23 +7,37 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+    text-align: center;
+    display: block;
 }
 
 
 /* Ejercicio 2: Posicionar el header */
 
+#ejercicioDos { 
+    display:none;
+    
+}
 /* Acá va tu código */
 
 
 
 /* Ejercicio 3: */
+#ejercicioTres {
+    margin-left: 200;
+    margin-top: 100;
+}
 
 /* Acá va tu código */
 
 
 
 /* Ejercicio 4: */
+#ejercicioCuatro {
+    position:fixed;
+    top: 0;
+    left: 0;
+}
 
 /* Acá va tu código */
 
@@ -32,7 +46,36 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 /* Ejercicio 5: */
 
 /* Acá va tu código */
-
-
-
+    #ejercicioCinco {
+        display:flex;
+        align-items: flex-start;
+        justify-content:space-evenly;
+        flex-direction: column;
+    }
 /* Ejercicio 6. */
+#ejercicioCinco {
+    display:flex;
+    align-items: flex-start;
+    justify-content:space-evenly;
+    flex-direction: row-reverse;
+}
+
+/* Ejercicio 7. */
+#ejercicioSiete {
+    background-color: blueviolet;
+    display:flex;
+    align-items: center;
+}
+#elementoUno {
+    align-self: flex-end;
+}
+#elementoDos {
+    align-self:flex-start;
+    margin-top: 30px;
+}
+#elementoTres {
+    align-self: flex-end;
+}
+#elementoCuatro {
+    align-self:flex-start;
+}
